--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,3 +31,12 @@ jobs:
       - name: Set Environment Variable
         run: |
           echo "MY_OUTPUT_KEY=$(cat my_output.env)" >> $GITHUB_ENV
+      - name: Build & Push Docker image
+        uses: mr-smithers-exellent/docker-build-push@v5
+        with:
+          image: ervis10/springboot-new-image
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile.ci
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
