change config from dockerfile.ci to dockerfile

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,6 @@ jobs:
           image: ervis10/springboot-new-image
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile.ci.ci
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
